--- a/0527.md
+++ b/0527.md
@@ -1,45 +1,60 @@
 스프링 부트 공부시작!!!
+===
 
-Spring initializr
+## Spring initializr
 https://start.spring.io/
+<br><br>
+## Maven? Gradle?
+### Maven Project
+### Gradle Project
+## 요즘은 Gradle로 다 넘어오는 추세
+<br>
 
-Maven Project
-Gradle Project
-요즘은 Gradle로 다 넘어오는 추세
+## Language는 Java
 
-Language는 Java
+## 버전 :
+### SNAPSHOT은 만들고있는 버전
+### M1같은건 정식 릴리즈 안된것들.
 
-버전 :
-SNAPSHOT은 만들고있는 버전
-M1같은건 정식 릴리즈 안된것들.
+<br><br>
 
+>Project Metadata
 
-Project Metadata
-Group : 보통 기업명, 도메인명 같은걸 적어준다.
-Artifact : 빌드되어 나올 때 결과물 (프로젝트명 같은거)
+>Group : 보통 기업명, 도메인명 같은걸 적어준다.
 
-Dependencies (이거 중요하다)
-어떤 라이브러리를 가져와서 쓸것인가??
+>Artifact : 빌드되어 나올 때 결과물 (프로젝트명 같은거)
 
-Spring Web
-Thymeleaf : View Template(뷰 템플릿) 회사마다 다른걸 쓸 수도 있음.
+<br>
 
-GENERATE를 누르면 다운로드 진행
+## Dependencies (이거 중요하다)
+>어떤 라이브러리를 가져와서 쓸것인가??
 
-build.gradle
-스프링 부트가 나오면서 개발자 친화적으로 변함.
+>Spring Web
+
+>Thymeleaf : View Template(뷰 템플릿) 회사마다 다른걸 쓸 수도 있음.
+
+<br>
+
+## GENERATE를 누르면 다운로드 진행
+
+### build.gradle
+>스프링 부트가 나오면서 개발자 친화적으로 변함.
 이런 설정 파일들도 제공이 된다.
 예전에는 다 쳤다고함.
 
-gradle : 버전설정하고 라이브러리 땡겨온다.
+### gradle
+>버전설정하고 라이브러리 땡겨온다.
 
-repositories : mavenCentral() 이곳에서 라이브러리를 받는다.. 라는 뜻
+### repositories
+>mavenCentral() 이곳에서 라이브러리를 받는다.. 라는 뜻
 
-dependencies : thymeleaf, spring web
+### dependencies
+>thymeleaf, spring web
 
-.gitignore : 소스코드 관리, 자동으로 만들어줌 굿
+### .gitignore
+>소스코드 관리, 자동으로 만들어줌 굿
 
 
-Spring boot는 tomcat web server를 내장
+## Spring boot는 tomcat web server를 내장
 
 
