--- a/0528.md
+++ b/0528.md
@@ -15,3 +15,21 @@
 주소로 요청할 때 파일명 그대로 작성.
 
 > 다만 요청이 왔을 때 우선적으로 Controller에서 맵핑된 것이 있는지 확인 후 없으면 정적 콘텐츠 탐색
+
+# thymeleaf
+> 서버없이 파일을 그냥 열어도 오류없이 출력을 확인할 수 있다.
+
+```html
+<p th:text="'안녕하세요.' + ${name}" > hello! empty</p>
+```
+
+>넘겨받는 데이터가 있으면 th:text값으로 치환된다.
+
+```java
+    @GetMapping("hello-mvc")
+    public String helloMvc(@RequestParam(value = "name", required = false) String name, Model model){
+        model.addAttribute("name",name);
+        return "hello-template";
+    }
+```
+>require = false 옵션을 주면 인자가 필수값이 아니게 된다. 이 경우 넘어가는 값이 없으므로 View에서는 null을 출력하게 된다.
